Some small performance improvements
git-svn-id: https://svn.apache.org/repos/asf/james/mailbox/trunk@1092346 13f79535-47bb-0310-9956-ffa450edef68